# common-library/openapi/openapi.yml
@@ -4,8 +4,8 @@ info:
   description: BackEndのREST API仕様です
   version: 1.0.0
 servers:
-  - url: http://localhost:{port}/
-    description: 開発環境
+  - url: https://cycle-54ee5-default-rtdb.firebaseio.com/
+    description: Firebase(Realtime Database)
     variables:
       port:
         enum:
@@ -17,7 +17,7 @@ tags:
     description: Marker操作のAPIグループ
 paths:
   /marker/create:
-    post:
+    put:
       operationId: marker_create
       summary: Marker登録API
       description: Marker登録APIです
@@ -30,25 +30,43 @@ paths:
             schema:
               type: object
               required:
-                - datetime
+                - timestamp
               properties:
-                datetime:
+                timestamp:
                   description: 登録日付(Unixミリ秒)
                   type: integer
                   format: int64
                   example: 1678150618427
-                lat:
+                latitude:
                   description: 緯度(latitude)
                   type: number
                   example: 35.360652
-                lng:
+                longitude:
                   description: 経度(longitude)
                   type: number
                   example: 138.727323
-                alt:
+                altitude:
                   description: 高度(altitude)
                   type: number
                   example: 3772.123
+                accuracy:
+                  description: メートル単位で測定された、場所の不確実性の半径
+                  type: number
+                  example: 10
+                altitudeAccuracy:
+                  description: 高度値の精度 (メートル単位)
+                  type: number
+                  example: 10
+                heading:
+                  description: >-
+                    このデバイスの水平方向の移動方向。真北からコンパスを中心に時計回りに度数で測定されます。したがって、北は 0 度、東は
+                    90 度、南は 180 度などです
+                  type: number
+                  example: 0
+                speed:
+                  description: デバイスの瞬間速度 (メートル/秒)
+                  type: number
+                  example: 10
                 comment:
                   type: object
                   description: Commentオブジェクト
@@ -83,23 +101,41 @@ paths:
                     type: integer
                     format: int64
                     example: 100
-                  datetime:
+                  timestamp:
                     description: 登録日付(Unixミリ秒)
                     type: integer
                     format: int64
                     example: 1678150618427
-                  lat:
+                  latitude:
                     description: 緯度(latitude)
                     type: number
                     example: 35.360652
-                  lng:
+                  longitude:
                     description: 経度(longitude)
                     type: number
                     example: 138.727323
-                  alt:
+                  altitude:
                     description: 高度(altitude)
                     type: number
                     example: 3772.123
+                  accuracy:
+                    description: メートル単位で測定された、場所の不確実性の半径
+                    type: number
+                    example: 10
+                  altitudeAccuracy:
+                    description: 高度値の精度 (メートル単位)
+                    type: number
+                    example: 10
+                  heading:
+                    description: >-
+                      このデバイスの水平方向の移動方向。真北からコンパスを中心に時計回りに度数で測定されます。したがって、北は 0
+                      度、東は 90 度、南は 180 度などです
+                    type: number
+                    example: 0
+                  speed:
+                    description: デバイスの瞬間速度 (メートル/秒)
+                    type: number
+                    example: 10
                   comment:
                     type: object
                     description: Commentオブジェクト
@@ -148,23 +184,41 @@ paths:
                     type: integer
                     format: int64
                     example: 100
-                  datetime:
+                  timestamp:
                     description: 登録日付(Unixミリ秒)
                     type: integer
                     format: int64
                     example: 1678150618427
-                  lat:
+                  latitude:
                     description: 緯度(latitude)
                     type: number
                     example: 35.360652
-                  lng:
+                  longitude:
                     description: 経度(longitude)
                     type: number
                     example: 138.727323
-                  alt:
+                  altitude:
                     description: 高度(altitude)
                     type: number
                     example: 3772.123
+                  accuracy:
+                    description: メートル単位で測定された、場所の不確実性の半径
+                    type: number
+                    example: 10
+                  altitudeAccuracy:
+                    description: 高度値の精度 (メートル単位)
+                    type: number
+                    example: 10
+                  heading:
+                    description: >-
+                      このデバイスの水平方向の移動方向。真北からコンパスを中心に時計回りに度数で測定されます。したがって、北は 0
+                      度、東は 90 度、南は 180 度などです
+                    type: number
+                    example: 0
+                  speed:
+                    description: デバイスの瞬間速度 (メートル/秒)
+                    type: number
+                    example: 10
                   comment:
                     type: object
                     description: Commentオブジェクト
